# Advent-of-Code

./: README.md  pyproject.toml
2019/: Amplifier.py  AoC_03.ipynb  AoC_04.ipynb  AoC_06.ipynb  AoC_07.ipynb  AoC_08.ipynb  AoC_09.ipynb  AoC_10.ipynb  Aoc_05.ipynb  Intcode.py  Intcode_archive.py
2019/.ipynb_checkpoints/: AoC_01-02-checkpoint.ipynb  AoC_04-checkpoint.ipynb
2020/: AoC_01.py  AoC_02.py  AoC_03.py  AoC_03_test.py  AoC_04.py  AoC_05.py  AoC_06.py  AoC_07.py  AoC_08.py  AoC_09.py  AoC_10.py  AoC_11.py  AoC_12.py  AoC_13.py  AoC_14.py  AoC_15.py  AoC_16.py  AoC_17.py  AoC_18.py  Test_notebook.ipynb
2020/.ipynb_checkpoints/: AoC_01-checkpoint.py
2021/: AoC_01.py  AoC_02.py  AoC_03.py  AoC_04.py  AoC_05.py  AoC_06.py  AoC_07.py  AoC_08.py  AoC_09.py  AoC_xx.py
2022/: AoC_01.py  AoC_02.py  AoC_03.py  AoC_04.py  AoC_05.py  AoC_06.py  AoC_07.py  AoC_08.py  AoC_09.py  AoC_xx.py
2023/: AoC_01.py  AoC_02.py  AoC_03.py  AoC_04.py  AoC_05.py  AoC_06.py  AoC_07.py  AoC_08.py  AoC_09.py  AoC_13.py  AoC_14.py  AoC_15.py  AoC_18.py  AoC_xx.py
datawars_ideas_bram/rocket_equation/: opdracht.md  solution.py
datawars_ideas_bram/trenches/: input.txt  opdracht.md  solution.py  stuff.ipynb
